--- a/Computer Science/数据结构与算法/数据结构机试题目/树和二叉树/二叉树算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/树和二叉树/二叉树算法总结.md
@@ -117,7 +117,7 @@ TreeNode* Build(vector<int>& preorder,int preStart,int preEnd,vector<int>& inord
 #### 后序+中序
 思路和上面基本一样，找到序列中的根节点和index信息
 ![](assets/二叉树算法总结/后序+中序.jpeg)
-#### 层序+中序(难)
+#### 层序+中序
 ```cpp
 TreeNode* BuildTree(const vector<int>& level_order, const vector<int>& in_order){
 
@@ -207,7 +207,40 @@ TreeNode* Build(string& preorder) {
     return root;
 }
 ```
+### 求和树构建
+[将满二叉树转换为求和树](将满二叉树转换为求和树.pdf)
+```cpp
+int subtreeSum(TreeNode* root) {
+    if (root == NULL) return 0;
+    return root->data + subtreeSum(root->left) + subtreeSum(root->right);
+}
 
+// 构建SumTree
+int Build_SumTree(TreeNode* root) {
+    if (root == NULL) return 0;
+    
+    // 叶子节点保持不变（或者根据题目要求设为0）
+    if (root->left == NULL && root->right == NULL) {
+        int old_value = root->data;
+        root->data = 0;  // 叶子节点在SumTree中通常为0
+        return old_value;
+    }
+    
+    // 先保存原始值
+    int old_value = root->data;
+    
+    // 计算左右子树的和
+    int left_sum = Build_SumTree(root->left);
+    int right_sum = Build_SumTree(root->right);
+    
+    // 设置当前节点的值为子树和
+    root->data = left_sum + right_sum;
+    
+    // 返回当前子树的总和（包括原始值）
+    return old_value + left_sum + right_sum;
+}
+
+```
 ## 完全二叉树的性质与计算
 
 完全二叉树因其数组存储和编号规律性，成为独立考点。
@@ -289,3 +322,49 @@ return isBST(root->left, min, root) && isBST(root->right, root, max);
     return isSame(root1->left,root2->left)&&isSame(root1->right&&root2->right);
     }
     ```
+
+## 哈夫曼树与WSL计算
+[构造哈夫曼树与带权路径长度](构造哈夫曼树与带权路径长度.pdf)
+### 1. 核心算法思想：贪心策略 
+
+构造哈夫曼树的核心在于**贪心算法（Greedy Algorithm）**。
+
+其目标是通过权值序列构造一棵带权路径长度（WPL）最短的二叉树 1。为了达到这个目标，我们需要遵循以下逻辑：
+
+- **最小合并**：每次从当前的权值集合中挑出**两个最小**的权值 $a$ 和 $b$ 2。
+    
+- **生成新根**：将这两个权值合并，创建一个新节点，其权值为 $sum = a + b$。
+    
+- **迭代循环**：将新生成的权值 $sum$ 放回集合中，重复上述步骤，直到集合中只剩下一个节点（即整棵树的根节点）。
+    
+- **WPL 计算**：带权路径长度等于所有**非叶子节点**（即所有合并产生的新节点）的权值之和 3333。
+    
+
+---
+
+### 2. 优先队列 (Priority Queue) API 总结 🛠️
+
+在 C++ 中，`std::priority_queue` 是实现哈夫曼树最理想的工具，因为它能自动帮我们维护数据的顺序。头文件```#include <queue>```
+
+#### 常用操作方法：
+
+|**方法**|**功能**|**时间复杂度**|
+|---|---|---|
+|**`push(val)`**|将元素加入队列，自动调整位置|$O(\log n)$|
+|**`top()`**|返回优先级最高的元素（堆顶）|$O(1)$|
+|**`pop()`**|移除优先级最高的元素|$O(\log n)$|
+|**`size()`**|返回队列中元素的个数|$O(1)$|
+|**`empty()`**|判断队列是否为空|$O(1)$|
+
+#### 关键的声明方式：
+
+由于我们要找的是**最小值**，必须使用**小顶堆**的声明格式：
+
+```cpp
+// 存储 int，底层容器用 vector，比较方式用 greater（小的先出）
+priority_queue<int, vector<int>, greater<int>> pq;
+//默认大顶堆(大的先出)
+priority_queue<int> pq
+```
+
+
