--- a/Computer Science/数据结构与算法/期末复习.md
+++ b/Computer Science/数据结构与算法/期末复习.md
@@ -42,6 +42,8 @@
     *   常见排序：$O(1) < O(\log n) < O(n) < O(n \log n) < O(n^2) < O(n^3) < O(2^n)$。
     *   重点在于分析循环的次数和递归的深度。
 *   **空间复杂度**：算法在运行过程中临时占用存储空间的大小（包括辅助变量、递归栈空间等）。
+* 计算机算法**必须具备**的三个基本特性**是：**1. 有穷性** **2. 确定性** **3. 可行性**
+
 
 ---
 
