--- a/Computer Science/数据结构与算法/数据结构机试题目/图/图算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/图/图算法总结.md
@@ -7,7 +7,7 @@ struct Edge {
     int to;
     int weight;
 };
-vector<vector<Edge>> graph;
+vector<vector<Edge>> graph;//graph[from][0] == Edge{to,weight}
 
 // 邻接矩阵
 // matrix[x][y] 记录 x 指向 y 的边的权重，0 表示不相邻
@@ -38,19 +38,64 @@ vector<vector<int>> matrix;//无权时数值改为01，或者使用bool
 class Graph {
 public:
     // 添加一条边（带权重）
-    virtual void addEdge(int from, int to, int weight) = 0;
+    void addEdge(int from, int to, int weight){
+       //邻接表
+       graph[from].push_back(Edge(to,weight));
+       graph[to].push_back(Edge(from,weight));//无向图
+       //邻接矩阵
+       graph[from][to] = weight;
+       graph[to][from] = weight;//无向图
+    }
 
     // 删除一条边
-    virtual void removeEdge(int from, int to) = 0;
+    void removeEdge(int from, int to){
+        //邻接表
+        //遍历找到要删除的边
+        //如果是无向图，在调用函数时还要删除to到from的边
+        for(auto& it = graph[from].begin();it != graph[from].end;it++){
+            if(it -> to == to){
+               graph[from].erase(it);
+               break;
+            } 
+        }
+        //邻接矩阵
+        //直接删除
+        graph[from][to] == 0;
+        graph[from][to] == 0;//无向图
+    }
 
     // 判断两个节点是否相邻
-    virtual bool hasEdge(int from, int to) = 0;
+    bool hasEdge(int from, int to){
+        //邻接表
+        for(auto& it = graph[from].begin();it!= graph[from].end();it++){
+           if(it->to == to){
+               return true;
+           }
+        }
+        return false;
+        //邻接矩阵
+        return graph[from][to];
+    }
 
     // 返回一条边的权重
-    virtual int weight(int from, int to) = 0;
+    int weight(int from, int to){
+    //邻接表
+    for(auto& it = graph[from].begin();it!= graph[from].end();it++){
+        if(it-> to == to){
+           return it->weight;
+        }
+    }
+    else return 0;//无边则返回0或者无穷大
+    //邻接矩阵
+    return graph[from][to];
+    }
 
     // 返回某个节点的所有邻居节点和对应权重
-    virtual std::vector<Edge> neighbors(int v) = 0;
+    vector<Edge> neighbors(int v){
+
+       return graph[v];
+
+    }
 
     // 返回节点总数
     virtual int size() = 0;
@@ -107,6 +152,7 @@ void BFS(int startVertex) {
 递归访问邻居
 ```cpp
 // 在 Graph 类中添加
+// 邻接表
 void DFS(int currVertex, vector<bool>& visited) {
     // 1. 访问当前节点
     visited[currVertex] = true;
@@ -117,6 +163,15 @@ void DFS(int currVertex, vector<bool>& visited) {
         if (!visited[neighbor]) {
             DFS(neighbor, visited);
         }
+    }
+}
+void DFS(int from,vector<vector<int>>& graph,vector<bool>& visited){
+    visited[from] = true;
+    cout << "正在访问：" << from <<endl;
+    for(int to:graph[from]){
+       if(!visited[to]){
+          DFS(to,graph,visited);
+       }
     }
 }
 ```
@@ -336,6 +391,59 @@ int main() {
 
     return 0;
 }
+
+```
+#### Union Find并查集算法
+```cpp
+class UF {
+private:
+    // 连通分量个数
+    int _count;
+    // 存储每个节点的父节点
+    vector<int> parent;
+
+public:
+    // n 为图中节点的个数
+    UF(int n) {
+        this->_count = n;
+        this->parent.resize(n);
+        for (int i = 0; i < n; i++) {
+            parent[i] = i;
+        }
+    }
+    
+    // 将节点 p 和节点 q 连通
+    void union_(int p, int q) {
+        int rootP = find(p);
+        int rootQ = find(q);
+        
+        if (rootP == rootQ)
+            return;
+        
+        parent[rootQ] = rootP;
+        // 两个连通分量合并成一个连通分量
+        _count--;
+    }
+
+    // 判断节点 p 和节点 q 是否连通
+    bool connected(int p, int q) {
+        int rootP = find(p);
+        int rootQ = find(q);
+        return rootP == rootQ;
+    }
+
+    int find(int x) {
+        if (parent[x] != x) {
+            parent[x] = find(parent[x]);
+        }
+        return parent[x];
+    }
+
+    // 返回图中的连通分量个数
+    int count() {
+        return _count;
+    }
+};
 ```
 ## 4 拓扑排序（判断环）
 **核心思想（有向无环图）：** 每次选入度为0的点，然后提取这个点并删掉它的出边
