--- a/Computer Science/数据结构与算法/数据结构机试题目/树和二叉树/二叉树算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/树和二叉树/二叉树算法总结.md
@@ -118,33 +118,34 @@ TreeNode* Build(vector<int>& preorder,int preStart,int preEnd,vector<int>& inord
 思路和上面基本一样，找到序列中的根节点和index信息
 ![](assets/二叉树算法总结/后序+中序.jpeg)
 #### 层序+中序
+将中序遍历中左右子树的节点找出，并在层序遍历中找到
 ```cpp
 TreeNode* BuildTree(const vector<int>& level_order, const vector<int>& in_order){
-
+    //层序遍历的第一个元素就是当前树的根节点
     TreeNode* root = level_order.empty() ? nullptr : new TreeNode(level_order[0]);
 
-    if(!root) return nullptr;
+    if(root) return nullptr;
 
     vector<int> level_left;
 
     vector<int> level_right;
 
-    vector<int> in_left;
+    vector<int> in_left;//保存左子树信息
 
-    vector<int> in_right;
+    vector<int> in_right;//保存右子树信息
 
     for(int i=0;i<in_order.size();i++){
 
         if(in_order[i] == root->val){
 
             for(int j=0;j<i;j++){
-
+                //将中序遍历中根节点左边的加入左子树数组
                 in_left.push_back(in_order[j]);
 
             }
 
             for(int j=i+1;j<in_order.size();j++){
-
+                //将中序遍历中根节点右边的加入右子树数组
                 in_right.push_back(in_order[j]);
 
             }
@@ -156,7 +157,7 @@ TreeNode* BuildTree(const vector<int>& level_order, const vector<int>& in_order)
     for(int i=1;i<level_order.size();i++){
 
         for(int j=0;j<in_left.size();j++){
-
+             //找到层序遍历中属于左子树的节点
             if(level_order[i] == in_left[j]){
 
                 level_left.push_back(level_order[i]);
@@ -166,7 +167,7 @@ TreeNode* BuildTree(const vector<int>& level_order, const vector<int>& in_order)
         }
 
         for(int j=0;j<in_right.size();j++){
-
+            //找到层序遍历中属于右子树的节点
             if(level_order[i] == in_right[j]){
 
                 level_right.push_back(level_order[i]);
@@ -176,7 +177,7 @@ TreeNode* BuildTree(const vector<int>& level_order, const vector<int>& in_order)
         }
 
     }
-
+     
     root->left = BuildTree(level_left, in_left);
 
     root->right = BuildTree(level_right, in_right);
@@ -261,7 +262,7 @@ int Build_SumTree(TreeNode* root) {
             ```cpp
            //构造二叉排序树
            void insert(TreeNode* root,int x){
-           if(root == NULL){
+           if(root == NULL){//如果当前节点为空，则创建节点
            root = new TreeNode(x);
            return
            }
@@ -297,8 +298,9 @@ int Build_SumTree(TreeNode* root) {
     
     - **核心算法**：递归检查每个节点是否满足BST定义（左子树所有节点值 < 当前节点值 < 右子树所有节点值）。
     - **具体题目**：[二叉排序树的判定](二叉排序树的判定.pdf)判断给定的二叉树结构是否为有效的BST。
-    ```cpp
-//定义：该函数返回 root 为根的子树的所有节点是否满足 max->val > root->val > min->val  
+```cpp
+//定义：该函数返回 root 为根的子树的所有节点是否满足 max->val > root->val > min->val，
+//传参时min和max传NULL,表示无限制，在递归的过程中只要保证左边都小于根（max），右边都大于根（min)即可  
 bool isBST(TreeNode* root, TreeNode* min, TreeNode* max) { 
 // base case 
 if (root == nullptr) return true; 
@@ -308,20 +310,20 @@ if (max != nullptr && root->val >= max->val) return false;
 // 根据定义，限定左子树的最大值是 root->val，右子树的最小值是 root->val 
 return isBST(root->left, min, root) && isBST(root->right, root, max); 
 }
-    ```
-        
-3. **BST的序列比较**
+```
+
+1. **BST的序列比较**
     - **核心算法**：根据序列构建BST，然后比较两棵BST的结构是否相同（通常通过比较遍历序列或递归比较）。
     - **具体题目**：[相同二叉排序树](相同二叉排序树.pdf)判断两个序列是否能构建出同一棵BST。
     ***判断相同的树**
-    ```cpp
-    bool isSame(TreeNode* root1,TreeNode* root2){
-    if(root1 == NULL&& root2 == NULL) return true;
-    if(root1 == NULL||root2 == NULL) return false;
-    if(root1->data != root2->data) return false;
-    return isSame(root1->left,root2->left)&&isSame(root1->right&&root2->right);
-    }
-    ```
+```cpp
+   bool isSame(TreeNode* root1,TreeNode* root2){
+   if(root1 == NULL&& root2 == NULL) return true;
+   if(root1 == NULL||root2 == NULL) return false;
+   if(root1->data != root2->data) return false;
+   return isSame(root1->left,root2->left)&&isSame(root1->right&&root2->right);
+ }
+```
 
 ## 哈夫曼树与WSL计算
 [构造哈夫曼树与带权路径长度](构造哈夫曼树与带权路径长度.pdf)
@@ -337,7 +339,7 @@ return isBST(root->left, min, root) && isBST(root->right, root, max);
     
 - **迭代循环**：将新生成的权值 $sum$ 放回集合中，重复上述步骤，直到集合中只剩下一个节点（即整棵树的根节点）。
     
-- **WPL 计算**：带权路径长度等于所有**非叶子节点**（即所有合并产生的新节点）的权值之和 3333。
+- **WPL 计算**：带权路径长度等于所有**非叶子节点**（即所有合并产生的新节点）的权值之和 。
     
 
 ---
@@ -348,13 +350,13 @@ return isBST(root->left, min, root) && isBST(root->right, root, max);
 
 #### 常用操作方法：
 
-|**方法**|**功能**|**时间复杂度**|
-|---|---|---|
-|**`push(val)`**|将元素加入队列，自动调整位置|$O(\log n)$|
-|**`top()`**|返回优先级最高的元素（堆顶）|$O(1)$|
-|**`pop()`**|移除优先级最高的元素|$O(\log n)$|
-|**`size()`**|返回队列中元素的个数|$O(1)$|
-|**`empty()`**|判断队列是否为空|$O(1)$|
+| **方法**          | **功能**         | **时间复杂度**   |
+| --------------- | -------------- | ----------- |
+| **`push(val)`** | 将元素加入队列，自动调整位置 | $O(\log n)$ |
+| **`top()`**     | 返回优先级最高的元素（堆顶） | $O(1)$      |
+| **`pop()`**     | 移除优先级最高的元素     | $O(\log n)$ |
+| **`size()`**    | 返回队列中元素的个数     | $O(1)$      |
+| **`empty()`**   | 判断队列是否为空       | $O(1)$      |
 
 #### 关键的声明方式：
 
