--- a/Computer Science/数据结构与算法/数据结构机试题目/线性表/线性表算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/线性表/线性表算法总结.md
@@ -1,3 +1,99 @@
+# 数组
+## 双指针技巧
+**重要函数：swap (`#include<algorithm>)`**
+双指针的**核心思想**是：使用两个变量（通常命名为 `left` 和 `right`，或者 `slow` 和 `fast`）在数组上移动，从而在**一趟遍历中完成任务**，将时间复杂度从 $O(n^2)$ 降低到 $O(n)$。
+### 首尾指针（left,right)
+我们先看一个非常经典的应用场景：**反转数组**。
+假设我们有一个数组 `[1, 2, 3, 4, 5]`，目标是把它变成 `[5, 4, 3, 2, 1]`。如果使用双指针，我们可以让一个指针指向数组的开头，另一个指向末尾。
+#### 算法思路 💡
+
+1. **初始化**：`left` 指向索引 0，`right` 指向索引 `n-1`。
+    
+2. **交换与移动**：交换 `left` 和 `right` 所指向的元素，然后让 `left` 向右走，`right` 向左走。
+    
+3. **停止条件**：当两个指针相遇或错过时，反转完成。
+在 C++ 中，我们可以使用 `std::swap` 来轻松交换两个元素。
+```cpp
+#include <iostream>
+#include <vector>
+#include <algorithm> // 包含 std::swap
+
+void reverseArray(std::vector<int>& nums) {
+    int left = 0;
+    int right = nums.size() - 1;
+
+    while (left < right) {
+        swap(nums[left++],nums[right--]);
+    }
+}
+```
+
+### 快慢指针（fast,slow)
+除了这种从两头向中间靠拢的“对撞指针”，双指针还有另一种非常强大的形式：**快慢指针**。它经常用于处理**去重**或者**寻找特定元素**。
+**快慢指针**处理“原地修改”问题的精髓：**慢指针负责锁定位置，快指针负责筛选目标。**
+##### **删除有序数组中的重复项**。
+[链表去重](链表去重.pdf)
+给定一个**升序排列**的数组 `nums`，请你**原地**删除重复出现的元素，使每个元素只出现一次，返回删除后数组的新长度。
+###### 算法思路
+
+- **慢指针 (`slow`)**：指向当前“确定不重复”序列的最后一个位置。
+    
+- **快指针 (`fast`)**：负责向后遍历，寻找下一个不重复的元素。
+    
+**规则如下：**
+
+1. 初始时，`slow` 指向索引 0（第一个元素永远是不重复的）。
+    
+2. `fast` 从索引 1 开始遍历。
+    
+3. 如果 `nums[fast] != nums[slow]`，说明找到了一个新的不同元素。
+4. 我们可以把 `slow` 看作是“新数组”的末尾索引。当我们通过 `fast` 找到一个从未见过的新元素时（即 `nums[fast] != nums[slow]`），我们应该：
+
+5. **移动 `slow`**：将 `slow` 向后移一位，为这个新成员腾出空间。
+    
+6. **赋值**：把 `fast` 指向的新元素复制到 `slow` 的新位置上。
+    
+这样，`slow` 及其左侧的所有元素就都是不重复的了。
+
+```cpp
+int DeletRepetition(vector<int>& nums){
+   if(nums.empty()){
+      return 0;
+   }
+   int slow = 0;
+   int fast = 1;
+   for(fast = 1;fast<nums.size();fast++){
+      if(nums[fast] != nums[slow]){
+         slow++;
+         swap(nums[fast],nums[slow]);
+      }
+   }
+   return ++slow;
+}
+```
+***易错点***
+这个算法要求数列是有序的，所以如果题目不是有序数组的话，需要先排序
+`sort(nums.begin(),nums.end())`
+
+
+#### 移除零
+给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。必须在原数组上操作。
+这依然可以用快慢指针解决。
+
+- **快指针 (`fast`)**：不断向后找**非零**数。
+    
+- **慢指针 (`slow`)**：指向下一个应该存放非零数的位置。
+```cpp
+void MoveZero(vector<int>& nums){
+    int slow = 0;
+    for(int fast;fast<nums.size();fast++){
+        if(nums[fast]!= 0){
+            swap(nums[fast],nums[slow++]);
+                     
+        }
+    }
+}
+```
 # 链表增删改查的实现
 ## 单链表
 ```cpp
@@ -103,21 +199,186 @@ ListNode* create(vector<int>& arr){
 }
 ```
 
-# 线性表的重要算法实现
+# 链表的重要算法实现
+## 反转链表
+**题目描述：** 给定一个单链表的头节点 `head`，请你反转链表，并返回反转后的头节点。 例如：`1 -> 2 -> 3 -> nullptr` 变为 `3 -> 2 -> 1 -> nullptr`。
+**引导思考：** 当我们站在节点 `1` 的时候，如果直接把 `1` 的 `next` 改成指向 `nullptr`，我们就再也找不到节点 `2` 了。这就像是在拆桥，如果我们拆了通往下一站的桥，就没法继续前进了。
+为了解决这个问题，我们在遍历链表时，通常需要**三个指针**来协同工作：
 
-- **链表操作与去重**
+1. `cur`：指向当前正在处理的节点。
     
-    - **算法核心**：遍历链表，使用辅助数据结构（如数组、集合）记录已出现过的键值（或其绝对值），根据规则（如保留首次出现的结点）进行结点的删除或保留。
-    - **关键点**：正确处理结点的链接关系（`Next`指针），处理非连续存储的地址信息，以及输出格式。
-    - **对应文档**：[链表去重](链表去重.pdf)
-    - 
-- **有序表合并与去重**
+2. `prev`：指向 `cur` 的前一个节点（反转后 `cur` 应该指向它）。
     
-    - **算法核心**：**归并思想**。由于两个线性表（L1, L2）本身有序且内部无重复，可以设置两个指针分别遍历两个表，比较当前元素，将较小的、且未在结果表中出现过的元素加入结果表，实现合并后依然有序且无重复。
-    - **关键点**：双指针遍历，处理相等元素（去重），以及结果序列的构建。
-    - **对应文档**[有序表的合并去重](有序表的合并去重.pdf)
-    ```cpp
-    ListNode* mergeWithDummy(ListNode* head1, ListNode* head2){
+3. `nextTemp`：临时存储 `cur` 的下一个节点。
+```cpp
+ListNode* reverseList(ListNode* head) { 
+    ListNode* prev = nullptr; // 初始时，前驱节点为空 
+    ListNode* curr = head; // 从头节点开始 
+    while (curr != nullptr) { 
+        ListNode* nextTemp = curr->next; // 1. 暂存后路 💾 
+        curr->next = prev; // 2. 反转指针 🔄 
+        prev = curr; // 3. prev 前移 🏃 
+        curr = nextTemp; // 4. curr 前移 🏃 
+    } 
+    // 循环结束时，curr 变成了 nullptr，prev 正好指向原链表的最后一个节点 
+    return prev; 
+    }
+```
+
+## 快慢指针
+### 找链表中点
+如果我想让你找到链表的**中间节点**（例如 `1->2->3->4->5` 找到 `3`），但只允许你**遍历一次**链表**小提示：** 想象两个人在赛道上跑步。如果 A 的速度是 B 的 **2 倍**，那么当 A 到达终点时，B 会在哪里？
+在 C++ 代码中，我们通常让 `fast` 每次走两步，`slow` 每次走一步：
+
+- `fast = fast->next->next;`
+    
+- `slow = slow->next;`
+    
+
+当 `fast` 走到链表末尾（即 `fast` 为 `nullptr` 或 `fast->next` 为 `nullptr`）时，`slow` 正好就停在了中间位置。
+```cpp
+ListNode* FindMid(ListNode* head){
+    //处理空链表
+    if (head == nullptr) return nullptr;
+    
+    ListNode* slow = head;
+    ListNode* fast = head;
+   // 偶数节点时返回前一个中点（更常见）
+   // 链表: 1->2->3->4->null
+   // 返回: 2
+    while (fast->next != nullptr && fast->next->next != nullptr) {
+        slow = slow->next;
+        fast = fast->next->next;
+    }
+    //偶数节点时返回后一个中点
+    // 链表: 1->2->3->4->null
+    // 返回: 3
+    //while (fast != nullptr && fast->next != nullptr)
+    
+    return slow;
+}
+```
+
+### 判断循环链表
+**判断一个链表是否有环**（即链表的最后一个节点指向了前面的某个节点，形成了一个死循环）。
+**想象一下：** 如果在一个环形操场上跑步，快的人（`fast`）和慢的人（`slow`）从同一起点出发。
+**请你推测一下：**
+
+1. 如果链表**有环**，这两个指针在移动过程中会出现什么情况？
+    
+2. 如果链表**没有环**，又会出现什么情况？
+**快慢指针**在检测环时的核心逻辑：
+3. **如果有环**：这就像在一个圆形操场上跑步，快的人（`fast`）总会领先慢的人（`slow`）一圈或几圈，并最终从背后**追上**并与慢的人“重叠”（即 `fast == slow`）。
+    
+4. **如果没有环**：这就像在一条笔直的公路上跑步，快的人会一直领先，直到看到终点（`nullptr`），而慢的人永远追不上快的人。
+```cpp
+bool hasCycle(ListNode *head) { 
+    if (head == nullptr || head->next == nullptr) return false; 
+    ListNode *slow = head; 
+    ListNode *fast = head; 
+    while (fast != nullptr && fast->next != nullptr) { 
+        slow = slow->next; // 慢指针走 1 步 🚶 
+        fast = fast->next->next; // 快指针走 2 步 🏃 
+        if (slow == fast) { // 两个指针相遇，说明有环！🤝 
+            return true; 
+        } 
+    } 
+    return false; // 快指针走到了尽头，说明没有环 🏁 }
+```
+### 删除链表的倒数第 N 个节点
+**题目：** 给你一个链表，删除链表的倒数第 `n` 个节点，并且只允许**遍历一遍**。 例如：`1 -> 2 -> 3 -> 4 -> 5`，n = 2。删除倒数第 2 个（即节点 `4`），变为 `1 -> 2 -> 3 -> 5`。
+
+**引导思考：** 如果我们想删除倒数第 `n` 个节点，关键是要找到它的**前驱节点**（即倒数第 `n+1` 个）。
+
+既然不能先数一遍总长度，我们可以让两个指针 `p1` 和 `p2` 保持一定的**间距**：
+
+1. 先让 `p1` 向前走 `n` 步。
+    
+2. 然后让 `p1` 和 `p2` 同时开始走，直到 `p1` 到达链表末尾。
+    
+**请你思考一下：** 当 `p1` 到达末尾时，`p2` 和 `p1` 之间正好空出了 `n` 个节点。此时，`p2` 指向的是**哪个位置**？
+是我们要删除的节点本身，还是它的前一个节点？（提示：你可以用 `1->2->3`, n=1 模拟一下）
+当我们让 `p1` 先走 `n` 步，然后 `p1` 和 `p2` 以同样的速度一起向后移动时，它们之间始终保持着长度为 `n` 的“间隔”。
+当 `p1` 达到末尾（即 `p1->next == nullptr`）时，`p2` 恰好停在**倒数第 `n+1` 个节点**上。这正是我们梦寐以求的位置，因为要删除一个节点，我们必须站在它的**前一个位置**，然后执行“跳过”操作：`p2->next = p2->next->next`。
+**一个重要的小技巧：哨兵节点 (Dummy Node)**
+在处理链表删除时，经常会遇到一个棘手的情况：**如果要删除的是头节点怎么办？** 比如链表是 `1->2`，我们要删除倒数第 2 个（也就是 `1`）。这时 `p2` 根本没有“前一个节点”可以站。
+为了代码的优雅和统一，我们通常会创建一个 **Dummy Node**：
+1. 创建一个虚节点，让它的 `next` 指向真正的 `head`。
+2. 让 `p1` 和 `p2` 都从这个虚节点出发。
+3. 这样，无论删除哪个节点，`p2` 都能找到它的前驱。
+```cpp
+ListNode* removeNthFromEnd(ListNode* head, int n) {
+    ListNode* dummy = new ListNode(0); // 创建哨兵节点
+    dummy->next = head;
+    ListNode* p1 = dummy;
+    ListNode* p2 = dummy;
+
+    // 1. 先让 p1 向前走 n 步
+    for (int i = 0; i < n; i++) {
+        p1 = p1->next;
+    }
+
+    // 2. 同时移动 p1 和 p2，直到 p1 走到哪里为止？
+    //使用p1->next != nullptr是为了让 p1停在最后一个节点。由于p1和 p2之间隔了n个节点，此时 p2恰好停在倒数第n+1个位置。
+    while (p1->next!=nullptr) { 
+        p1 = p1->next;
+        p2 = p2->next;
+    }
+
+    // 3. 执行删除操作
+    ListNode* target = p2->next;
+    p2->next = p2->next->next; // 跳过目标节点
+
+    // 释放内存并返回
+    delete target;
+    ListNode* newHead = dummy->next;
+    delete dummy;
+    return newHead;
+}
+```
+
+
+## 合并有序表
+
+使用 **哨兵节点 (Dummy Node)**
+如果我们不使用哨兵，我们就得先判断 `L1` 和 `L2` 谁的头节点更小，然后手动把那个小的节点设为新链表的 `head`。
+有了 **Dummy Node**，情况就简单了：
+- 我们先创建一个“虚”的起始点。
+- 我们只需要一个指针（比如叫 `curr`）从这个虚点开始，往后一个一个“挂”节点。
+- **最后返回 `dummy->next`**，就能轻松得到合并后的真正头节点，不用担心初始头节点的特殊判断。
+如何比较和合并？
+想象你在玩牌，左手有一叠排好序的牌（L1），右手也有叠排好序的牌（L2）。你每次都看一眼两叠牌中最上面的那张：
+- **哪个小，就取走哪张**放到结果区。
+- 被取走的那叠牌，露出下面的一张，继续对比。
+**一个必须要考虑的问题** 💡
+当 `while` 循环结束时，意味着 `l1` 或 `l2` 其中一个已经走到尽头（变为了 `nullptr`）。
+如果 `l1` 已经空了，但 `l2` 还有剩余的节点（比如 `l2` 还有 `5 -> 6`），我们应该如何处理这些剩下的节点？可以直接把它们接在 `curr->next` 后面吗？
+可以直接接上去。因为 `l2` 本身就是一个已经排好序的链表，我们不需要再遍历它，只需要把 `curr->next` 指向 `l2` 的开头，剩下的节点就会自然地连接在我们的新链表后面
+```cpp
+ListNode* merge(ListNode*l1,ListNode*l2){
+    ListNode* dummy = new ListNode(0);
+    ListNode* curr = dummy; 
+    while (l1 != nullptr && l2 != nullptr) {
+        if (l1->val <= l2->val) {
+            curr->next = l1;
+            l1 = l1->next; // l1 往后移一步
+    } 
+        else {
+            curr->next = l2;
+            l2 = l2->next; // l2 往后移一步
+    }
+    curr = curr->next; // 新链表的指针也往后移一步
+}
+// 循环结束后，处理剩余节点
+    if (l1 != nullptr) curr->next = l1;
+    if (l2 != nullptr) curr->next = l2;
+    return dummy->next;
+}    
+```
+**有序表合并与去重**
+[有序表的合并去重](有序表的合并去重.pdf)
+```cpp
+    ListNode* merge(ListNode* head1, ListNode* head2){
     ListNode dummy(0);  // 哨兵节点
     ListNode* tail = &dummy;
     
@@ -129,7 +390,7 @@ ListNode* create(vector<int>& arr){
         else if(head1->data == head2->data){
             tail->next = head1;
             head1 = head1->next;
-            head2 = head2->next;  // 去重
+            head2 = head2->next;  // 去重,跳过相同元素
         }
         else{
             tail->next = head2;
@@ -142,14 +403,69 @@ ListNode* create(vector<int>& arr){
     return dummy.next;
 }
     ```
-- **约瑟夫环问题**
+
+
+## 约瑟夫环问题
+
+**算法核心**：**循环链表模拟**。按照题目描述的报数规则（报数到`m`出列，并用出列者的密码更新`m`），在循环链表中依次删除（出列）结点，并记录出列顺序。
+**关键点**：循环链表的构建、遍历和结点删除，动态更新报数上限`m`。
+```cpp
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+struct list {
+    int id;
+    int code;
+    list* next;
+    list(int id, int code) : id(id), code(code), next(NULL) {}
+};
+
+int main() {
+    int n, m;
+    cin >> n >> m;
+    vector<int> codes(n);
+    for (int i = 0; i < n; i++) {
+        cin >> codes[i];
+    }
     
-    - **算法核心**：**循环链表模拟**。按照题目描述的报数规则（报数到`m`出列，并用出列者的密码更新`m`），在循环链表中依次删除（出列）结点，并记录出列顺序。
-        
-    - **关键点**：循环链表的构建、遍历和结点删除，动态更新报数上限`m`。
-    - **对应文档**：《约瑟夫环-报数出圈问题.pdf》
-- **序列位置重组**
+    // 创建循环链表
+    list* head = new list(1, codes[0]);
+    list* tail = head;
     
-    - **算法核心**：**按奇偶下标分离与合并**。遍历原序列，根据结点位置（奇数位或偶数位）将元素分别存入两个辅助列表，最后将两个列表合并输出。
-    - **关键点**：下标（索引）的判断（通常从1开始计数），两个子序列的构建。
-    - **对应文档**：《奇偶序列-整数序列奇数偶数位置重组.pdf》
+    for (int i = 1; i < n; i++) {
+        list* cur = new list(i + 1, codes[i]);
+        tail->next = cur;
+        tail = cur;
+    }
+    // 连接头尾形成循环链表
+    tail->next = head;
+    
+    list* p = head;
+    list* prev = tail;  // 保存前一个节点，用于删除操作
+    
+    while (p->next != p) {  // 当链表只剩一个节点时结束
+        m--;
+        if (m == 0) {
+            cout << p->id << " ";
+            m = p->code;
+            
+            // 删除当前节点
+            prev->next = p->next;
+            list* temp = p;
+            p = p->next;
+            delete temp;
+        } else {
+            prev = p;
+            p = p->next;
+        }
+    }
+    
+    // 输出最后一个节点
+    cout << p->id << endl;
+    delete p;
+    
+    return 0;
+}
+```
