--- a/Computer Science/数据结构与算法/期末复习.md
+++ b/Computer Science/数据结构与算法/期末复习.md
@@ -596,7 +596,7 @@ D. 主串中对应的子串与 $T[1 \dots k-1]$ 相同
 **E. 树、森林与二叉树的转换**
 *   **口诀**：“左孩子右兄弟”。
     *   树变二叉树：将第一个孩子作为左孩子，将下一个兄弟作为右孩子。
-*   这使得任何树或森林都可以用二叉树的结构来存储。
+*   这使得任何树或森林都可以用二叉树的结构来存储（**唯一的**）。
 
 **F. 线索二叉树**
 *   利用那 $n+1$ 个空指针，指向前驱和后继，方便遍历。
@@ -839,7 +839,7 @@ D. 主串中对应的子串与 $T[1 \dots k-1]$ 相同
 
 ### 第八章：查找 (Search)
 
-#### 1. 详细知识点讲解
+ #### 1. 详细知识点讲解
 
 **A. 静态查找表**
 1.  **顺序查找 (Sequential Search)**：
