--- a/Computer Science/数据结构与算法/数据结构机试题目/排序/排序算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/排序/排序算法总结.md
@@ -222,7 +222,7 @@ void sort(int[] nums) {
 # 归并排序
 ## 核心思路
 把数组切成两半，先把这两半子数组分别排好序，然后再合并这两个有序数组，整个数组就排好序了。
-![](归并排序.jpeg)
+![](assets/排序算法总结/归并排序.jpeg)
 ## 代码
 ```cpp
 #include <iostream>
