--- a/Computer Science/数据结构与算法/数据结构机试题目/栈和队列/队列和栈算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/栈和队列/队列和栈算法总结.md
@@ -258,3 +258,44 @@ string infixToPostfix(string expression) {
     return result;
 }
 ```
+
+# 模拟
+## 模拟出栈
+[判断堆栈出栈序列是否有效](判断堆栈出栈序列是否有效.pdf)
+```cpp
+#include <iostream>
+#include <vector>
+#include <stack>
+
+using namespace std;
+
+int main(){
+    int n;
+    cin >> n;
+    vector<int> nums(n);
+    for(int &num : nums){
+        cin >> num;
+    }
+    
+    stack<int> s;
+    int index = 0;
+    
+    for(int i = 1; i <= n; i++){
+        s.push(i);
+        // 关键修改：先检查栈是否为空，再访问栈顶元素
+        while(!s.empty() && s.top() == nums[index]){
+            s.pop();
+            index++;
+        }
+    }
+    
+    // 最终的判断应该基于是否能完全匹配
+    if(index == n){
+        cout << "yes" << endl;
+    } else {
+        cout << "no" << endl;
+    }
+    
+    return 0;
+}
+```
