--- a/Computer Science/数据结构与算法/数据结构机试题目/线性表/线性表算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/线性表/线性表算法总结.md
@@ -406,7 +406,7 @@ ListNode* merge(ListNode*l1,ListNode*l2){
 
 
 ## 约瑟夫环问题
-
+[约瑟夫环-报数出圈问题](约瑟夫环-报数出圈问题.pdf)
 **算法核心**：**循环链表模拟**。按照题目描述的报数规则（报数到`m`出列，并用出列者的密码更新`m`），在循环链表中依次删除（出列）结点，并记录出列顺序。
 **关键点**：循环链表的构建、遍历和结点删除，动态更新报数上限`m`。
 ```cpp
