--- a/Computer Science/数据结构与算法/数据结构机试题目/串/串题目算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/串/串题目算法总结.md
@@ -5,7 +5,7 @@
 1. **预处理**：计算 `next` 数组（地图）。
     
 2. **匹配**：利用 `next` 数组在主串中寻找模式串。
-## next数组求值
+### next数组求值
 求 `next` 数组的过程本质上是**模式串自己对自己进行匹配**。我们用两个指针：`i`（当前处理的位置）和 `j`（当前相等前后缀的长度）。
 ```cpp
 void getNext(string T, int next[]) {
@@ -26,7 +26,7 @@ void getNext(string T, int next[]) {
     }
 }
 ```
-## KMP 匹配过程
+### KMP 匹配过程
 有了 `next` 数组，匹配主串 `S` 和模式串 `T` 的逻辑就非常清晰了：主串指针 `i` 永远不回头。
 ```cpp
 void KMP(string S, string T) {
@@ -53,10 +53,49 @@ void KMP(string S, string T) {
     }
 }
 ```
-## 代码中的关键点 💡
+### 代码中的关键点 💡
 
 - **`while (j > 0 && T[i] != T[j])`**：这是最精妙的一行。它通过 `next` 数组让指针 `j` 实现“瞬移”，避免了 BF 算法那种从头开始的低效。
     
 - **空间复杂度**：由于需要额外存储 `next` 数组，空间复杂度为 $O(m)$。
     
 - **时间复杂度**：虽然代码里有嵌套循环，但由于主串指针 `i` 始终递增，总时间复杂度是 $O(n + m)$
+
+# 2 最小周期串
+## 判断方法
+
+假设长度为 `n`，我们枚举所有可能的周期长度 `k`（从 1 到 n）：
+- `k` 必须整除 `n`
+- 验证：原字符串是否等于前 `k` 个字符重复 `n/k` 次
+一旦找到最小的满足条件的 `k`，就是答案。
+```cpp
+#include <iostream>
+#include <string>
+
+using namespace std;
+
+int main(){
+	string s;
+	getline(cin,s);
+	int n= s.length();
+	int result = n;
+	for(int k=1;k<=n;k++){
+		if(n%k!=0) continue;//k不是n的因数
+		bool isPeriod = true;
+		for(int i=k;i<n;i++){
+			
+			if(s[i]!=s[i%k]){
+				isPeriod = false;
+				break;
+			}
+		} 
+		if(isPeriod){
+			result = k;
+			break;
+		}
+	}
+	cout << result << endl;
+	return 0;
+}
+```
+
