--- a/Computer Science/数据结构与算法/数据结构机试题目/图/图算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/图/图算法总结.md
@@ -124,7 +124,7 @@ public:
 ```cpp
 #include <queue>
 
-// 在 Graph 类中添加此方法
+// 邻接表
 void BFS(int startVertex) {
     vector<bool> visited(numVertices, false); // 标记数组
     queue<int> q;
@@ -145,6 +145,26 @@ void BFS(int startVertex) {
             }
         }
     }
+}
+
+//邻接矩阵
+void BFS(vector<vector<int>>& graph,int start){
+    vector<bool> visited(graph.size()+1,false);
+    queue<int> q;
+    
+    visited[start] = true;
+    q.push(start);
+    while(!q.empty()){
+        int cur = q.front();//正在访问的节点
+        q.pop();
+        for(int i=1;i<=graph.size();i++){
+            if(graph[cur][i]&&!visited[i]){
+                visited[i] = true;
+                q.push(i);
+            }
+        }
+        
+    } 
 }
 ```
 ### 深度优先搜索（DFS）
@@ -188,6 +208,40 @@ Dijkstra 算法是一种用于计算图中单源最短路径的算法，**其本
 Dijkstra 算法和标准的 BFS 算法的区别只有两个：
 1、标准 BFS 算法使用普通队列，Dijkstra 算法使用优先级队列，让距离起点更近的节点优先出队（贪心思想的体现）。
 2、标准 BFS 算法使用一个 `visited` 数组记录访问过的节点，确保算法不会陷入死循环；Dijkstra 算法使用一个 `distTo` 数组，确保算法不会陷入死循环，同时记录起点到其他节点的最短路径。
+```cpp
+//堆优化
+int Dj(vector<vector<Edge>> &graph,int n,int start){
+	vector<bool> visited(n+1,false);
+	vector<int> mindist(n+1,INT_MAX);
+	priority_queue<pair<int,int>,vector<pair<int,int>>,greater<pair<int,int>>> pq;
+	pq.push({0,start});
+	mindist[start] = 0;
+	while(!pq.empty()){
+		pair<int,int> cur = pq.top();pq.pop();
+		// 如果当前距离大于已知最短距离，跳过
+        if (cur.first > mindist[cur.second]) {
+            continue;
+        }
+		visited[cur.second] = true;
+		for(Edge e:graph[cur.second]){
+			if(!visited[e.to]&&mindist[cur.second] + e.weight<mindist[e.to]){
+				mindist[e.to] = mindist[cur.second] + e.weight;
+				pq.push({mindist[e.to],e.to});
+			}
+		}
+	}
+	int max = 0;
+	for(int i=1;i<=n;i++){
+		if(mindist[i] == INT_MAX){//存在未遍历到的点
+			return -1;
+		}
+		max = mindist[i]>max?mindist[i]:max;
+	}
+	return max;
+	
+} 
+```
+
 ### Floyd算法（所有点）
 [求图中任意两顶点最短路径](求图中任意两顶点最短路径.pdf)
 ```cpp
@@ -207,12 +261,26 @@ int path[MAXN][MAXN];
 
 int n, m;
 
+
 void floyd() {
+     // 初始化路径矩阵
+    for (int i = 0; i < n; i++) {
+        for (int j = 0; j < n; j++) {
+            if (i != j && dist[i][j] < INF) {
+                path[i][j] = j;  // 如果i和j之间有直接边，则路径中下一跳是j
+            } else {
+                path[i][j] = -1; // 没有路径
+            }
+        }
+    }
     for (int k = 1; k <= n; k++) {
+    //k是中介节点
         for (int i = 1; i <= n; i++) {
+            //i是from
             if (dist[i][k] == INF) continue; // 剪枝
             
             for (int j = 1; j <= n; j++) {
+            //j是to
                 if (dist[k][j] == INF) continue;
 
                 // 如果经过 k 能缩短距离
@@ -252,12 +320,6 @@ void printPath(int start, int end) {
 ```
 
 
-    
-	
-	
-	
-
-[网络时延-节点信号传递最短时间计算](网络时延-节点信号传递最短时间计算.pdf)
 ## 3 最小生成树
 ### Prim 算法（加点法）
 #### 1. 核心思想 (加点法)
@@ -448,8 +510,79 @@ public:
 ## 4 拓扑排序（判断环）
 **核心思想（有向无环图）：** 每次选入度为0的点，然后提取这个点并删掉它的出边
 **如果拓扑排序进行不下去说明图中存在环**
+```cpp
+#include <iostream>
+#include <vector>
+#include <queue>
 
+using namespace std;
+
+bool topologicalSort(int n, vector<vector<int>>& adj) {
+    vector<int> inDegree(n, 0);
+    vector<int> result;
+
+    // 1. 统计每个节点的入度
+    for (int i = 0; i < n; i++) {
+        for (int neighbor : adj[i]) {
+            inDegree[neighbor]++;
+        }
+    }
+
+    // 2. 将所有入度为 0 的节点加入队列
+    queue<int> q;
+    for (int i = 0; i < n; i++) {
+        if (inDegree[i] == 0) {
+            q.push(i);
+        }
+    }
+
+    // 3. 开始 BFS
+    while (!q.empty()) {
+        int u = q.front();
+        q.pop();
+        result.push_back(u);
+
+        // 遍历所有邻居，减少它们的入度
+        for (int v : adj[u]) {
+            inDegree[v]--;
+            if (inDegree[v] == 0) {
+                q.push(v);
+            }
+        }
+    }
+
+    // 4. 检查是否存在环
+    if (result.size() != n) {
+        cout << "图中存在环，无法进行拓扑排序！" << endl;
+        return false;
+    }
+
+    // 打印结果
+    cout << "拓扑排序结果为: ";
+    for (int x : result) cout << x << " ";
+    cout << endl;
+    return true;
+}
+
+int main() {
+    int n = 6; // 6个顶点 (0-5)
+    vector<vector<int>> adj(n);
+
+    // 添加有向边 (u -> v)
+    adj[5].push_back(2);
+    adj[5].push_back(0);
+    adj[4].push_back(0);
+    adj[4].push_back(1);
+    adj[2].push_back(3);
+    adj[3].push_back(1);
+
+    topologicalSort(n, adj);
+
+    return 0;
+}
+```
 [判断有向图中是否有环](判断有向图中是否有环.pdf)： 基于有向图的邻接矩阵，判断图中是否存在环，输出结果为1（有环）或0（无环）。
+
 
 
 ## 5 关键路径
