--- a/Computer Science/数据结构与算法/数据结构机试题目/排序/排序算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/排序/排序算法总结.md
@@ -33,22 +33,33 @@ pivot1          pivot2
 ## 代码
 **挖坑法**
 ```cpp
-#include <iostream> 
-#include <vector> 
-using namespace std; 
-// 使用教材经典的“挖坑法”划分逻辑 
 int partition(vector<int>& arr, int low, int high) { 
-int pivot = arr[low]; // 以第一个元素为枢轴 
-while (low < high) { // 从右向左移动，找第一个比枢轴小的元素 
-     while (low < high && arr[high] >= pivot) { high--; } 
-     arr[low] = arr[high]; // 将小的移到左边“坑”里 
-     // 从左向右移动，找第一个比枢轴大的元素 
-     while (low < high && arr[low] <= pivot) { low++; } 
-     arr[high] = arr[low]; // 将大的移到右边“坑”里 
-     } 
-     arr[low] = pivot; // 枢轴放回最终位置 
-     return low; 
+    int pivot = arr[low]; // 以第一个元素为枢轴，保存枢轴的值
+    // 此时arr[low]位置成为"坑"
+    
+    while (low < high) { 
+        // 从右向左移动，找第一个比枢轴小的元素
+        while (low < high && arr[high] >= pivot) { 
+            high--; 
+        }
+        // 找到后，将该元素填到左边的"坑"里
+        arr[low] = arr[high]; 
+        // 现在arr[high]位置成为新的"坑"
+        
+        // 从左向右移动，找第一个比枢轴大的元素
+        while (low < high && arr[low] <= pivot) { 
+            low++; 
+        }
+        // 找到后，将该元素填到右边的"坑"里
+        arr[high] = arr[low]; 
+        // 现在arr[low]位置成为新的"坑"
+    } 
+    
+    // 循环结束时，low == high，这就是枢轴的最终位置
+    arr[low] = pivot; // 枢轴放回最终位置 
+    return low; // 返回枢轴位置
 }
+//整个过程不用管坑，只要移动指针指到的元素并赋值到坑的位置即可
 ```
 **双指针法**
 ```cpp
