--- a/Computer Science/数据结构与算法/数据结构机试题目/串/串题目算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/串/串题目算法总结.md
@@ -7,16 +7,20 @@
 2. **匹配**：利用 `next` 数组在主串中寻找模式串。
 ### next数组求值
 求 `next` 数组的过程本质上是**模式串自己对自己进行匹配**。我们用两个指针：`i`（当前处理的位置）和 `j`（当前相等前后缀的长度）。
+把next数组理解为要如果匹配失败要回退到的位置的指针数组
+
 ```cpp
 void getNext(string T, int next[]) {
-    int m = T.length();
+    //初始化
+    int m = T.length(); 
     next[0] = 0; // 第一个字符的前后缀长度显然为0
     int j = 0;   // j 代表当前最长相等前后缀的长度
     
     for (int i = 1; i < m; i++) {
-        // 当字符不匹配时，j 顺着 next 数组回溯，直到找到匹配或回到开头
+        //过程中i指向后缀末尾位置，j指向前缀末尾位置
+        // 当匹配失败时，j 顺着 next 数组回溯，直到找到匹配或回到开头
         while (j > 0 && T[i] != T[j]) {
-            j = next[j - 1];
+            j = next[j - 1];//不匹配，j回退到前一位的next数组
         }
         // 如果匹配成功，最长相等前后缀长度加1
         if (T[i] == T[j]) {
