--- a/Computer Science/数据结构与算法/数据结构机试题目/排序/排序算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/排序/排序算法总结.md
@@ -87,7 +87,7 @@ int partition(vector<int>& arr, int low, int high) {
 **递归排序**
 ```cpp
 void quickSort(vector<int>& arr, int low, int high) { 
-    if (low < high) { 
+    if (low <= high) { 
     // 核心步骤：分区 
     int pivotIndex = partition(arr, low, high); 
     // 递归排序左半部分和右半部分 
@@ -133,15 +133,15 @@ void minHeapSink(std::vector<int>& heap, int node, int size) {
     }
 }
 
-// 大顶堆的上浮操作
+// 大顶堆的上浮操作（自上而下建堆）
 void maxHeapSwim(std::vector<int>& heap, int node) {
     while (node > 0 && heap[parent(node)] < heap[node]) {
         swap(heap, parent(node), node);
-        node = parent(node);
+        node = parent(node);//因为交换了顺序，要重新向上比较
     }
 }
 
-// 大顶堆的下沉操作
+// 大顶堆的下沉操作，目的是让目前堆顶不符合大顶堆性质的元素下沉到应该在的位置，恢复大顶堆
 void maxHeapSink(std::vector<int>& heap, int node, int size) {
     while (left(node) < size || right(node) < size) {
         // 小顶堆和大顶堆的唯一区别就在这里，比较逻辑相反
@@ -157,7 +157,7 @@ void maxHeapSink(std::vector<int>& heap, int node, int size) {
             break;
         }
         swap(heap, node, max);
-        node = max;
+        node = max;//继续向下探索
     }
 }
 
@@ -183,17 +183,26 @@ void swap(std::vector<int>& heap, int i, int j) {
     heap[j] = temp;
 }
 
+
+```
+**排序**
+```cpp
 // 将输入的数组元素从小到大排序
 void sort(std::vector<int>& nums) {
+     int heapSize = nums.size();
     // 第一步，原地建堆，注意这里创建的是大顶堆
     // 只要从左往右对每个元素调用 swim 方法，就可以原地建堆
     for (int i = 0; i < nums.size(); i++) {
         maxHeapSwim(nums, i);
     }
+    //优化后的建堆方法，从最后一个非叶子节点(n/2-1)从下到上下沉
+    for(int i=n/2-1;i>0;i--){
+        maxHeapSink(nums,i,heapSize);
+    }
 
     // 第二步，排序
     // 现在整个数组已经是一个大顶了，直接模拟删除堆顶元素的过程即可
-    int heapSize = nums.size();
+   
     while (heapSize > 0) {
         // 从堆顶删除元素，放到堆的后面
         swap(nums, 0, heapSize - 1);
@@ -203,31 +212,6 @@ void sort(std::vector<int>& nums) {
         // 现在 nums[0..heapSize) 是一个大顶堆，nums[heapSize..) 是有序元素
     }
 }
-```
-**排序**
-```cpp
-// 将输入的数组元素从小到大排序
-void sort(int[] nums) {
-    // 第一步，原地建堆，注意这里创建的是大顶堆
-    // 只要从左往右对每个元素调用 swim 方法，就可以原地建堆
-    for (int i = 0; i < nums.length; i++) {
-        maxHeapSwim(nums, i);
-    }
-
-    // 第二步，排序
-    // 现在整个数组已经是一个大顶了，直接模拟删除堆顶元素的过程即可
-    int heapSize = nums.length;
-    while (heapSize > 0) {
-        // 从堆顶删除元素，放到堆的后面
-        swap(nums, 0, heapSize - 1);    
-        heapSize--;
-        // 恢复堆的性质
-        maxHeapSink(nums, 0, heapSize);
-        // 现在 nums[0..heapSize) 是一个大顶堆，nums[heapSize..) 是有序元素
-    }
-}
-
-// maxHeapSink, maxHeapSwim 等函数代码见上文
 ```
 
 # 归并排序
