--- a/Computer Science/数据结构与算法/数据结构机试题目/树和二叉树/二叉树算法总结.md
+++ b/Computer Science/数据结构与算法/数据结构机试题目/树和二叉树/二叉树算法总结.md
@@ -246,7 +246,28 @@ int Build_SumTree(TreeNode* root) {
 
 完全二叉树因其数组存储和编号规律性，成为独立考点。
 [完全二叉树的子树-结点数目计算](完全二叉树的子树-结点数目计算.pdf)
+```cpp
+int count_nodes(int m, int n) {
+    if (m > n) return 0;  // 当前节点不存在
+    
+    // 计算左右子树的节点数
+    int left_count = count_nodes(2 * m, n);
+    int right_count = count_nodes(2 * m + 1, n);
+    
+    // 返回当前节点(1) + 左子树节点数 + 右子树节点数
+    return 1 + left_count + right_count;
+}
+```
 [完全二叉树的公共父结点问题](完全二叉树的公共父结点问题.pdf)
+```cpp
+int find(int n1,int n2){
+	while(n1!=n2){
+	    if(n1>n2) n1=n1/2;
+	    else n2=n2/2;
+	}
+	return n1;
+}
+```
 [输出完全二叉树的某一层](输出完全二叉树的某一层.pdf)
 - **核心算法**：利用完全二叉树“自上而下、自左而右从1开始编号”的性质。
 - **应试关键**：记住关键公式：节点 `i` 的左孩子为 `2*i`，右孩子为 `2*i+1`；父节点为 `i/2`（向下取整）。
@@ -263,6 +284,7 @@ int Build_SumTree(TreeNode* root) {
            //构造二叉排序树
            void insert(TreeNode* root,int x){
            if(root == NULL){//如果当前节点为空，则创建节点
+           //这是插入函数进行操作的步骤
            root = new TreeNode(x);
            return
            }
@@ -294,7 +316,7 @@ int Build_SumTree(TreeNode* root) {
 }
         ```
             
-2. **BST的判定**
+1. **BST的判定（分治）**
     
     - **核心算法**：递归检查每个节点是否满足BST定义（左子树所有节点值 < 当前节点值 < 右子树所有节点值）。
     - **具体题目**：[二叉排序树的判定](二叉排序树的判定.pdf)判断给定的二叉树结构是否为有效的BST。
@@ -312,7 +334,7 @@ return isBST(root->left, min, root) && isBST(root->right, root, max);
 }
 ```
 
-1. **BST的序列比较**
+1. **BST的序列比较（分治）**
     - **核心算法**：根据序列构建BST，然后比较两棵BST的结构是否相同（通常通过比较遍历序列或递归比较）。
     - **具体题目**：[相同二叉排序树](相同二叉排序树.pdf)判断两个序列是否能构建出同一棵BST。
     ***判断相同的树**
@@ -370,3 +392,17 @@ priority_queue<int> pq
 ```
 
 
+
+## 二叉树的高度
+```cpp
+
+int GetHeight( BinTree* BT )
+{
+    if (BT == NULL) return 0;
+    if (!BT->Left && !BT->Right) return 1;//遍历到了叶子节点
+    int l = GetHeight(BT->Left) + 1;
+    int r = GetHeight(BT->Right) + 1;
+    return (l > r ? l : r);//树的高度取最大
+}
+
+```
